fixed upgrade to ng17 issue

--- a/src/app/pages/default/default.component.scss
+++ b/src/app/pages/default/default.component.scss
@@ -13,5 +13,10 @@
    .date {
     text-align: center;
     margin: 1rem;
+    span {
+      margin: 0.5rem;
+      padding: 0.5rem;
+      font-weight: bold;
+    }
   }
   }
