--- a/src/app/pages/default/default.component.html
+++ b/src/app/pages/default/default.component.html
@@ -1,4 +1,10 @@
 <div class="centralize">
-  <p class="headline">Something great is being created here 🚀</p>
-  <p class="date">{{ now | date:'medium' }}</p>
+  <p class="headline">🚀 Do It Now 🚀</p>
+<!--   <p class="date">{{ now | date:'medium' }}</p>  -->
+  
+  <div class="date">
+    <span>{{ currentDateTime | date : "fullDate" }}</span
+    ><br />
+    <span>{{ currentDateTime | date : "mediumTime" }}</span>
+  </div>
 </div>
